syntax = "proto3";
package akash.audit.v1;

import "gogoproto/gogo.proto";

import "cosmos_proto/cosmos.proto";

option go_package = "pkg.akt.dev/go/node/audit/v1";

// EventTrustedAuditorCreated defines an SDK message for signing a provider attributes
message EventTrustedAuditorCreated {
  string owner = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag)   = "owner",
    (gogoproto.moretags)  = "yaml:\"owner\""
  ];
  string auditor = 2 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag)   = "auditor",
    (gogoproto.moretags)  = "yaml:\"auditor\""
  ];
}

// EventTrustedAuditorCreated defines an SDK message for signing a provider attributes
message EventTrustedAuditorDeleted {
  string owner = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag)   = "owner",
    (gogoproto.moretags)  = "yaml:\"owner\""
  ];
  string auditor = 2 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag)   = "auditor",
    (gogoproto.moretags)  = "yaml:\"auditor\""
  ];
}
