syntax = "proto3";
package akash.market.v1;

import "gogoproto/gogo.proto";

import "cosmos/base/v1beta1/coin.proto";

import "akash/market/v1/bid.proto";
import "akash/market/v1/order.proto";
import "akash/market/v1/lease.proto";

option go_package = "pkg.akt.dev/go/node/market/v1";

// EventOrderCreated
message EventOrderCreated {
  option (gogoproto.equal) = false;

  OrderID id = 1 [
    (gogoproto.nullable)   = false,
    (gogoproto.customname) = "ID",
    (gogoproto.jsontag)    = "id",
    (gogoproto.moretags)   = "yaml:\"id\""
  ];
}

// EventOrderClosed
message EventOrderClosed {
  option (gogoproto.equal) = false;

  OrderID id = 1 [
    (gogoproto.nullable)   = false,
    (gogoproto.customname) = "ID",
    (gogoproto.jsontag)    = "id",
    (gogoproto.moretags)   = "yaml:\"id\""
  ];
}

// EventBidCreated
message EventBidCreated {
  option (gogoproto.equal) = false;

  BidID id = 1 [
    (gogoproto.nullable)   = false,
    (gogoproto.customname) = "ID",
    (gogoproto.jsontag)    = "id",
    (gogoproto.moretags)   = "yaml:\"id\""
  ];
  cosmos.base.v1beta1.DecCoin price = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)  = "price",
    (gogoproto.moretags) = "yaml:\"price\""
  ];
}

// EventBidClosed
message EventBidClosed {
  option (gogoproto.equal) = false;

  BidID id = 1 [
    (gogoproto.nullable)   = false,
    (gogoproto.customname) = "ID",
    (gogoproto.jsontag)    = "id",
    (gogoproto.moretags)   = "yaml:\"id\""
  ];
}

// EventLeaseCreated
message EventLeaseCreated {
  option (gogoproto.equal) = false;

  LeaseID id = 1 [
    (gogoproto.nullable)   = false,
    (gogoproto.customname) = "ID",
    (gogoproto.jsontag)    = "id",
    (gogoproto.moretags)   = "yaml:\"id\""
  ];

  cosmos.base.v1beta1.DecCoin price = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)  = "price",
    (gogoproto.moretags) = "yaml:\"price\""
  ];
}

// EventLeaseClosed
message EventLeaseClosed {
  option (gogoproto.equal) = false;

  LeaseID id = 1 [
    (gogoproto.nullable)   = false,
    (gogoproto.customname) = "ID",
    (gogoproto.jsontag)    = "id",
    (gogoproto.moretags)   = "yaml:\"id\""
  ];
}

